public/stylesheets/style.css
/*
  Harvard palette:
  
  crimson - #900013
  dark    - #570912
  brown   - #B0AA64
  light   - #FFFFDA
  mellow  - #D9D9B8
  black   - #000000
*/

body .container {
    padding: 40px;
    border-left: 3px solid #B0AA64;
    border-right: 3px solid #B0AA64;
    background-color: #570912;
}

h1, h2, h3, h4, h5, h6 {
    color: #FFFFDA;
}

body {
    background-color: #900013;
}

h1 small {
    margin-left: 8px;
}

.page-header {
    padding-bottom: 40px;
}

.divider {
    margin-top: 20px;
    margin-bottom: 15px;
    border-top: 2px solid #FFFFDA;
}

.jumbotron {
    padding: 15px;
    padding-bottom: 65px;
    background-color: #900013;
    border-radius: 5px;
}

.jumbotron h1 {
    font-size: 28pt;
}

.jumbotron p {
    margin-top: 12px;
    color: #D9D9B8;
    text-align: justify;
    font-size: 14pt;
    line-height: 1.2em;
}

.jumbotron p strong {
    font-size: 16pt;
}

.jumbotron ul {
    list-style-type: none;
    color: white;
    font-size: 14pt;
}

.jumbotron ul li {
    padding: 5px;
}

.jumbotron ul li:before {
    content: "\00BB \0020";
}

.jumbotron .btn {
    margin-top: 10px;
    margin-right: 40px;
    zoom: 110%;
}

.blurb {
    background-color: whiteSmoke;
    border-radius: 5px;
    padding: 5px;
    margin-top: 5px;
    margin-right: -10px;
    margin-left: 17px;
    height: 10em;
}

.blurb h2 {
    color: black;
}

